[package]
name = "spritec"
version = "0.1.0"
authors = [
  "Sunjay Varma <varma.sunjay@gmail.com>",
  "James Shi <jsjamesshi@gmail.com>",
  "Bill Chen <bchen.tcu@gmail.com>",
  "Mara Gagiu <mara.gagiu@gmail.com>",
]
edition = "2018"

[workspace]
members = [
  "spritec_binding/native"
]

[dependencies]
glium = "0.26"
tobj = "0.1"
vek = { version = "0.9", features = ["serde"] }
# Keep this version synced with the version from vek
num-traits = "0.1"
# Keep this version synced with the version from vek
approx = "0.1.1"
image = "0.23"
structopt = "0.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.3"
thiserror = "1.0"
terminator = "0.1"
interpolation = "0.2"

[dependencies.gltf]
version = "0.15"
#TODO: Remove this `git` dependency and rely on the version from crates.io.
# Problem: https://github.com/gltf-rs/gltf/pull/278#issuecomment-598402015
# Update to a version released after March 11, 2020.
git = "https://github.com/gltf-rs/gltf"
features = ["KHR_lights_punctual"]
