[package]
name = "spritec"
version = "0.1.0"
authors = [
  "Sunjay Varma <varma.sunjay@gmail.com>",
  "James Shi <jsjamesshi@gmail.com>",
  "Bill Chen <bchen.tcu@gmail.com>",
  "Mara Gagiu <mara.gagiu@gmail.com>",
]
description = "The sprite compiler - generates 2D pixel art from 3D models"
readme = "README.md"
# crates.io/category_slugs
categories = ["rendering", "rendering::graphics-api", "rendering::engine", "games"]
license = "MPL-2.0"
repository = "https://github.com/ProtoArt/spritec"
homepage = "https://github.com/ProtoArt/spritec"
edition = "2018"

exclude = ["*.py", "*.yml", "samples", "spritec_binding", "spritec_gui", "pipelines"]

[badges]
maintenance = { status = "as-is" }

[workspace]
members = [
  "spritec_binding/native"
]

[dependencies]
glium = "0.26"
tobj = "0.1"
vek = { version = "0.9", features = ["serde"] }
# Keep this version synced with the version from vek
num-traits = "0.1"
# Keep this version synced with the version from vek
approx = "0.1.1"
image = "0.23"
structopt = "0.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.3"
thiserror = "1.0"
terminator = "0.1"
interpolation = "0.2"

[dependencies.gltf]
version = "0.15"
features = ["KHR_lights_punctual"]
