[package]
name = "spritec-preview"
description = "The GUI frontend for configuring and previewing sprites generated with spritec"
repository = "https://github.com/ProtoArt/spritec"
license = "MPL-2.0"
version = "0.1.0"
authors = [
  "Sunjay Varma <varma.sunjay@gmail.com>",
  "James Shi <jsjamesshi@gmail.com>",
  "Bill Chen <bchen.tcu@gmail.com>",
  "Mara Gagiu <mara.gagiu@gmail.com>",
]
edition = "2018"

[dependencies]
spritec = { path = ".." }
wasm-bindgen = "0.2.42"
euc = "0.2"
vek = "0.9"
