[package]
name = "spritec-preview"
description = "The GUI frontend for configuring and previewing sprites generated with spritec"
repository = "https://github.com/ProtoArt/spritec"
license = "MPL-2.0"
version = "0.1.0"
authors = [
  "Sunjay Varma <varma.sunjay@gmail.com>",
  "James Shi <jsjamesshi@gmail.com>",
  "Bill Chen <bchen.tcu@gmail.com>",
  "Mara Gagiu <mara.gagiu@gmail.com>",
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spritec = { path = ".." }
euc = "0.2"
vek = "0.9"
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[features]
default = ["console_error_panic_hook"]
