[package]
name = "spritec-preview"
description = "The GUI frontend for configuring and previewing sprites generated with spritec"
repository = "https://github.com/ProtoArt/spritec"
license = "MPL-2.0"
version = "0.1.0"
authors = [
  "Sunjay Varma <varma.sunjay@gmail.com>",
  "James Shi <jsjamesshi@gmail.com>",
  "Bill Chen <bchen.tcu@gmail.com>",
  "Mara Gagiu <mara.gagiu@gmail.com>",
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spritec = { path = ".." }
euc = "0.3"
vek = "0.9"
tobj = "0.1"
log = "0.4"
strum = "0.15"
strum_macros = "0.15"
